--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,14 +11,22 @@
   "dependencies": {
     "@headlessui/react": "^2.2.4",
     "@heroicons/react": "^2.2.0",
+    "@reduxjs/toolkit": "^2.8.2",
     "@types/file-saver": "^2.0.7",
     "axios": "^1.10.0",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "file-saver": "^2.0.5",
+    "lucide-react": "^0.525.0",
     "next": "15.4.1",
+    "next-auth": "^5.0.0-beta.29",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-dropzone": "^14.3.8",
     "react-hot-toast": "^2.5.2",
+    "react-redux": "^9.2.0",
+    "react-toastify": "^11.0.5",
+    "recharts": "^3.1.0",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
