login and social login

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,66 +1,53 @@
-# Resume Screener Backend Environment Variables
-# Copy this file to .env and fill in your actual values
+# Environment
+ENVIRONMENT=production
 
 # Database Configuration
-MONGODB_URL=mongodb://localhost:27017
+MONGODB_URL=mongodb+srv://username:password@cluster.mongodb.net
 MONGODB_DB_NAME=resume_screener
 
 # Server Configuration
-BACKEND_HOST=localhost
+BACKEND_HOST=0.0.0.0
 BACKEND_PORT=8000
-BACKEND_URL=http://localhost:8000
-CORS_ORIGINS=http://localhost:3000,http://localhost:3001
+BACKEND_URL=https://your-app.railway.app
+CORS_ORIGINS=https://your-frontend-domain.com,http://localhost:3000
 
-# Security
-SECRET_KEY=your-super-secret-key-change-in-production-min-32-chars
+# Security Configuration
+SECRET_KEY=your-super-secret-key-here-make-it-long-and-random
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
+API_V1_STR=/api/v1
+API_RATE_LIMIT=100
+
+# Social Authentication
+GOOGLE_CLIENT_ID=your-google-client-id
+GOOGLE_CLIENT_SECRET=your-google-client-secret
+LINKEDIN_CLIENT_ID=your-linkedin-client-id
+LINKEDIN_CLIENT_SECRET=your-linkedin-client-secret
 
 # AI Services
-GROQ_API_KEY=your_groq_api_key_here
-OPENAI_API_KEY=your_openai_api_key_here
+GROQ_API_KEY=your-groq-api-key
+OPENAI_API_KEY=your-openai-api-key
 
-# LinkedIn Integration
-LINKEDIN_CLIENT_ID=your_linkedin_client_id
-LINKEDIN_CLIENT_SECRET=your_linkedin_client_secret
-LINKEDIN_REDIRECT_URI=http://localhost:8000/api/v1/linkedin/auth/callback
+# Redis Configuration
+REDIS_URL=redis://default:password@host:port
+CACHE_EXPIRE_SECONDS=3600
+OTP_EXPIRE=300
 
-# Indeed Integration
-INDEED_API_KEY=your_indeed_api_key
-INDEED_PUBLISHER_ID=your_indeed_publisher_id
-
-# Glassdoor Integration
-GLASSDOOR_API_KEY=your_glassdoor_api_key
-GLASSDOOR_PARTNER_ID=your_glassdoor_partner_id
-
-# ZipRecruiter Integration
-ZIPRECRUITER_API_KEY=your_ziprecruiter_api_key
-ZIPRECRUITER_ACCOUNT_ID=your_ziprecruiter_account_id
-
-# File Upload Configuration
+# File Upload
 MAX_FILE_SIZE=10485760
 UPLOAD_DIR=./uploads
 ALLOWED_EXTENSIONS=.pdf,.doc,.docx,.txt
 
-# Redis Cache (Optional)
-REDIS_URL=redis://localhost:6379
-CACHE_EXPIRE_SECONDS=3600
-
 # Email Configuration (Optional)
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
-SMTP_USER=your_email@gmail.com
-SMTP_PASSWORD=your_app_password
+SMTP_USER=your-email@gmail.com
+SMTP_PASSWORD=your-app-password
 EMAIL_FROM=noreply@resumescreener.com
 
 # Development Settings
-DEBUG=true
+DEBUG=false
 LOG_LEVEL=INFO
-ENVIRONMENT=development
-
-# API Configuration
-API_V1_STR=/api/v1
-API_RATE_LIMIT=100
 
 # Job Board Settings
 DEFAULT_JOB_EXPIRY_DAYS=30
@@ -71,7 +58,7 @@ MAX_CANDIDATES_PER_USER=1000
 ANALYTICS_RETENTION_DAYS=365
 ENABLE_ANALYTICS=true
 
-# Security Headers
+# Security
 ENABLE_CORS=true
 ENABLE_RATE_LIMITING=true
-ENABLE_HTTPS_REDIRECT=false
+ENABLE_HTTPS_REDIRECT=true
