--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,12 +1,14 @@
 # FastAPI and ASGI
 fastapi>=0.104.0
 uvicorn[standard]>=0.24.0
+gunicorn>=21.2.0
 python-multipart>=0.0.6
 
 # Database
 motor>=3.3.0
 pymongo>=4.6.0
 beanie>=1.23.0
+redis>=5.0.0
 
 # AI and ML
 groq>=0.4.0
@@ -23,6 +25,8 @@ pydantic-settings>=2.1.0
 # Security
 python-jose[cryptography]>=3.3.0
 passlib[bcrypt]>=1.7.4
+PyJWT>=2.8.0
+authlib>=1.6.0
 
 # HTTP client
 httpx>=0.25.0
