--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -3,12 +3,27 @@
     "next/core-web-vitals",
     "next/typescript"
   ],
+  "ignorePatterns": [
+    ".next/**",
+    "node_modules/**",
+    "out/**",
+    "build/**",
+    "dist/**",
+    "*.config.js",
+    "*.config.mjs"
+  ],
   "rules": {
     "@typescript-eslint/no-unused-vars": [
       "warn", 
-      { "argsIgnorePattern": "^_" }  // Ignore unused vars with _
+      { 
+        "argsIgnorePattern": "^_",
+        "varsIgnorePattern": "^_"
+      }
     ],
     "@typescript-eslint/no-explicit-any": "warn",
+    "@typescript-eslint/no-empty-object-type": "warn",
+    "@typescript-eslint/no-unsafe-function-type": "warn",
+    "@typescript-eslint/no-require-imports": "off",
     "no-console": "warn",
     "semi": ["error", "always"],
     "quotes": ["error", "double"]
