feat(api): Add Google Drive integration endpoints

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -24,6 +24,11 @@ GOOGLE_CLIENT_SECRET=your-google-client-secret
 LINKEDIN_CLIENT_ID=your-linkedin-client-id
 LINKEDIN_CLIENT_SECRET=your-linkedin-client-secret
 
+# Google Drive Integration (Optional - will use main Google credentials if not set)
+GOOGLE_DRIVE_CLIENT_ID=your-google-drive-client-id
+GOOGLE_DRIVE_CLIENT_SECRET=your-google-drive-client-secret
+GOOGLE_DRIVE_REDIRECT_URI=http://localhost:8000/api/v1/google-drive/callback
+
 # AI Services
 GROQ_API_KEY=your-groq-api-key
 OPENAI_API_KEY=your-openai-api-key
