--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,6 +6,7 @@ bcrypt==4.3.0
 beanie==2.0.0
 black==25.1.0
 cachetools==5.5.2
+celery==5.3.4
 certifi==2025.8.3
 cffi==1.17.1
 charset-normalizer==3.4.2
