--- a/backend/.env.example
+++ b/backend/.env.example
@@ -33,6 +33,16 @@ GOOGLE_DRIVE_REDIRECT_URI=http://localhost:8000/api/v1/google-drive/callback
 GROQ_API_KEY=your-groq-api-key
 OPENAI_API_KEY=your-openai-api-key
 
+# AI Scoring
+PROVIDER=openai
+OPENAI_BASE_URL=https://ai.nuox.io/v1
+OPENAI_MODEL=gpt-4
+GROQ_MODEL=llama-3.1-70b-versatile
+ENABLE_SCORING=1
+SCORING_TEMPERATURE=0.2
+SCORING_MAX_TOKENS=1200
+CACHE_TTL_SECONDS=300
+
 # Redis Configuration
 REDIS_URL=redis://default:password@host:port
 CACHE_EXPIRE_SECONDS=3600
