--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -36,6 +36,7 @@ idna==3.10
 iniconfig==2.1.0
 isort==6.0.1
 Jinja2==3.1.6
+jsonschema==4.23.0
 lazy-model==0.3.0
 loguru==0.7.3
 lxml==6.0.0
@@ -46,6 +47,7 @@ mypy==1.17.1
 mypy_extensions==1.1.0
 numpy==2.3.2
 oauthlib==3.3.1
+openai==1.59.6
 openpyxl==3.1.5
 packaging==25.0
 pandas==2.3.1
@@ -89,6 +91,7 @@ rsa==4.9.1
 six==1.17.0
 sniffio==1.3.1
 starlette==0.47.2
+tenacity==9.0.0
 typing-inspection==0.4.1
 typing_extensions==4.14.1
 tzdata==2025.2
