--- a/backend/.env.example
+++ b/backend/.env.example
@@ -43,6 +43,15 @@ SCORING_TEMPERATURE=0.2
 SCORING_MAX_TOKENS=1200
 CACHE_TTL_SECONDS=300
 
+
+# Vector DB (Qdrant)
+# Set these to use Qdrant Cloud instead of embedded
+QDRANT_URL=https://YOUR-CLUSTER-ID.YOUR-REGION.aws.cloud.qdrant.io:6333
+QDRANT_API_KEY=your-qdrant-api-key
+# Optional overrides
+QDRANT_COLLECTION=resume_chunks
+EMBEDDING_DIM=1536
+
 # Redis Configuration
 REDIS_URL=redis://default:password@host:port
 CACHE_EXPIRE_SECONDS=3600
