--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,61 +1,122 @@
-aiofiles==24.1.0
-annotated-types==0.7.0
-anyio==4.10.0
-Authlib==1.6.1
-bcrypt==4.3.0
-beanie==2.0.0
-black==25.1.0
-cachetools==5.5.2
-celery==5.3.4
-certifi==2025.8.3
-cffi==1.17.1
-charset-normalizer==3.4.2
-click==8.2.1
-cryptography==45.0.5
-distro==1.9.0
-dnspython==2.7.0
-ecdsa==0.19.1
-email_validator==2.2.0
-et_xmlfile==2.0.0
+# Core FastAPI and web framework dependencies
 fastapi==0.116.1
-flake8==7.3.0
+uvicorn==0.35.0
+uvloop==0.21.0
+gunicorn==23.0.0
+starlette==0.47.2
+pydantic==2.11.7
+pydantic-settings==2.10.1
+pydantic_core==2.33.2
+
+# Async and file handling
+aiofiles==24.1.0
+anyio==4.10.0
+httpx==0.28.1
+httpcore==1.0.9
+httptools==0.6.4
+h11==0.16.0
+websockets==15.0.1
+watchfiles==1.1.0
+
+# Database and ODM
+beanie==2.0.0
+motor==3.7.1
+pymongo==4.13.2
+dnspython==2.7.0
+
+# Authentication and security
+bcrypt==4.3.0
+cryptography==45.0.5
+PyJWT==2.10.1
+python-jose==3.5.0
+passlib==1.7.4
+Authlib==1.6.1
+
+# Task queue and caching
+celery==5.3.4
+redis==6.3.0
+cachetools==5.5.2
+
+# AI and ML dependencies
+openai==1.59.6
+groq==0.30.0
+tenacity==9.0.0
+jsonschema==4.23.0
+
+# Document processing
+pdfplumber==0.11.7
+PyPDF2==3.0.1
+pypdfium2==4.30.0
+python-docx==1.2.0
+pdfminer.six==20250506
+
+# Data processing
+pandas==2.3.1
+numpy==2.3.2
+openpyxl==3.1.5
+
+# Logging and monitoring
+loguru==0.7.3
+
+# Vector database
+qdrant-client==1.11.3
+
+# Google APIs and OAuth
 google-api-core==2.25.1
 google-api-python-client==2.177.0
 google-auth==2.40.3
 google-auth-httplib2==0.2.0
 google-auth-oauthlib==1.2.2
 googleapis-common-protos==1.70.0
-groq==0.30.0
-gunicorn==23.0.0
-h11==0.16.0
-httpcore==1.0.9
+
+# HTTP and requests
+requests==2.32.4
+requests-oauthlib==2.0.0
+urllib3==2.5.0
 httplib2==0.22.0
-httptools==0.6.4
-httpx==0.28.1
-idna==3.10
-iniconfig==2.1.0
+
+# Utilities and helpers
+python-multipart==0.0.20
+python-dotenv==1.1.1
+python-dateutil==2.9.0.post0
+email_validator==2.2.0
+click==8.2.1
+six==1.17.0
+pytz==2025.2
+tzdata==2025.2
+
+# Development and testing dependencies
+pytest==8.4.1
+pytest-asyncio==1.1.0
+black==25.1.0
 isort==6.0.1
-Jinja2==3.1.6
-jsonschema==4.23.0
-lazy-model==0.3.0
-loguru==0.7.3
-lxml==6.0.0
-MarkupSafe==3.0.2
-mccabe==0.7.0
-motor==3.7.1
+flake8==7.3.0
 mypy==1.17.1
 mypy_extensions==1.1.0
-numpy==2.3.2
-oauthlib==3.3.1
-openai==1.59.6
-openpyxl==3.1.5
-packaging==25.0
-pandas==2.3.1
-passlib==1.7.4
-pathspec==0.12.1
-pdfminer.six==20250506
-pdfplumber==0.11.7
+
+# Additional dependencies for specific features
+lxml==6.0.0
 pillow==11.3.0
+reportlab==4.4.3
+PyYAML==6.0.2
+Jinja2==3.1.6
+MarkupSafe==3.0.2
+
+# Low-level dependencies (usually auto-installed)
+annotated-types==0.7.0
+certifi==2025.8.3
+cffi==1.17.1
+charset-normalizer==3.4.2
+distro==1.9.0
+ecdsa==0.19.1
+et_xmlfile==2.0.0
+idna==3.10
+iniconfig==2.1.0
+lazy-model==0.3.0
+mccabe==0.7.0
+oauthlib==3.3.1
+packaging==25.0
+pathspec==0.12.1
 platformdirs==4.3.8
 pluggy==1.6.0
 proto-plus==1.26.1
@@ -64,41 +125,12 @@ pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pycodestyle==2.14.0
 pycparser==2.22
-pydantic==2.11.7
-pydantic-settings==2.10.1
-pydantic_core==2.33.2
 pyflakes==3.4.0
 Pygments==2.19.2
-PyJWT==2.10.1
-pymongo==4.13.2
 pyparsing==3.2.3
-PyPDF2==3.0.1
-pypdfium2==4.30.0
-pytest==8.4.1
-pytest-asyncio==1.1.0
-python-dateutil==2.9.0.post0
-python-docx==1.2.0
-python-dotenv==1.1.1
-python-jose==3.5.0
-python-multipart==0.0.20
-pytz==2025.2
-PyYAML==6.0.2
-qdrant-client==1.11.3
-redis==6.3.0
-reportlab==4.4.3
-requests==2.32.4
-requests-oauthlib==2.0.0
 rsa==4.9.1
-six==1.17.0
 sniffio==1.3.1
-starlette==0.47.2
-tenacity==9.0.0
 typing-inspection==0.4.1
 typing_extensions==4.14.1
-tzdata==2025.2
 uritemplate==4.2.0
-urllib3==2.5.0
-uvicorn==0.35.0
-uvloop==0.21.0
-watchfiles==1.1.0
 websockets==15.0.1
